[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://GameScenes/Game.tscn" type="PackedScene" id=2]
[ext_resource path="res://DungeonGeneration/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Music/airtone_-_reNovation_1.mp3" type="AudioStream" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="MainMenu" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource( 4 )
autoplay = true

[node name="Game" parent="." instance=ExtResource( 2 )]

[connection signal="credits" from="MainMenu" to="." method="_on_MainMenu_credits"]
[connection signal="start_game" from="MainMenu" to="." method="_on_MainMenu_start_game"]
[connection signal="game_over" from="Game" to="." method="_on_Game_game_over"]
[connection signal="game_won" from="Game" to="." method="_on_Game_game_won"]
